--- a/universal-login-wallet/src/styles/components/_form.sass
+++ b/universal-login-wallet/src/styles/components/_form.sass
@@ -18,3 +18,14 @@
   background: #EFEFEF
   border: 2px solid #E0E0E0
   resize: none
+
+.send-section
+  width: 80%
+  h2
+    margin-top: 25px
+    margin-bottom: 0px
+  .input
+    height: 30px
+    margin-top: 5px
+  .status
+    margin-top: 5px
